--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -29,7 +29,7 @@
 
 window#waybar {
   background: rgba(21, 18, 27, 0);
-  color: @color4;
+  color: @ffffff;
 }
 
 tooltip {
@@ -84,7 +84,7 @@ window#waybar.empty #window {
   margin: 6px 2px;
   /* padding: 0px 8px; */
   background-color: @color13;
-  color: @foreground;
+  color: #ffffff;
 }
 
 /* #workspaces button:hover { */
