--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -36,7 +36,8 @@ window#waybar {
 }
 
 tooltip {
-  opacity: 0.8;
+  opacity: 1;
+  padding-top: 20px;
   background-color: @moduleBackground;
   border-radius: 5px;
 }
@@ -51,13 +52,13 @@ tooltip {
 
 /* ICONS offset correction */
 .module#custom-logo,
-.module#language,
+/* .module#language, */
 .module#custom-lock_screen {
   padding: 0px 18px 0px 10px;
 }
 
 .module#custom-logo {
-  color: @color4;
+  color: @foreground;
 }
 
 .module#submap {
@@ -96,18 +97,23 @@ tooltip {
   color: white;
 }
 
-.module#workspaces.app_tray {
-  background: transparent;
-  background-color: transparent;
-  color: inherit;
-  box-shadow: none;
-  transition: none;
+.module#workspaces.app_tray button.active {
+  color: @peach;
+  border-radius: 10px;
+  padding-left: 8px;
+  padding-right: 8px;
+  animation: gradient_f 20s ease-in infinite;
+  transition: all 0.3s cubic-bezier(0.55, -0.68, 0.48, 1.682);
+}
+
+.module#custom-mic_used_by_app {
+  color: white;
+  border: 2px solid white;
+  background-color: red;
 }
 
 .module#clock {
   opacity: 0.8;
   background: #1e1e2e;
   border-radius: 8px;
-  /* padding: 0px 10px; */
-  /* margin: 3px 0px; */
 }
