--- a/home/.config/waybar/styles/monitor_specific/eink.css
+++ b/home/.config/waybar/styles/monitor_specific/eink.css
@@ -6,6 +6,11 @@
   background: rgba(21, 18, 27, 0);
 }
 
+#waybar.eink .module#workspaces.main button {
+  padding: 0;
+  margin: 2;
+}
+
 .eink tooltip {
   background-color: @moduleBackground;
 }
