--- a/home/.config/waybar/styles/monitor_specific/eink.css
+++ b/home/.config/waybar/styles/monitor_specific/eink.css
@@ -31,7 +31,7 @@
 .eink * {
   color: white;
   border: none;
-  font-family: "JetBrainsMono Nerd Font", "Symbols Nerd Font",
+  font-family: "Iosevka Nerd Font", "Symbols Nerd Font",
     "Symbols Nerd Font Mono";
   font-weight: bold;
   font-size: 13px;
