--- a/home/.config/waybar/styles/monitor_specific/big_screen.css
+++ b/home/.config/waybar/styles/monitor_specific/big_screen.css
@@ -18,7 +18,7 @@
 
 .big * {
   border: none;
-  font-family: "JetBrainsMono Nerd Font", "Symbols Nerd Font",
+  font-family: "Iosevka Nerd Font", "Symbols Nerd Font",
     "Symbols Nerd Font Mono";
   font-weight: bold;
   font-size: 15px;
