--- a/home/.config/waybar/styles/monitor_specific/big_screen.css
+++ b/home/.config/waybar/styles/monitor_specific/big_screen.css
@@ -9,7 +9,7 @@
 }
 
 #waybar.big .module#workspaces.main button {
-  padding: 5;
+  padding: 5px;
 }
 
 .big tooltip {
@@ -18,8 +18,8 @@
 
 .big * {
   border: none;
-  font-family: "Iosevka Nerd Font", "Symbols Nerd Font",
-    "Symbols Nerd Font Mono";
+  font-family:
+    "Iosevka Nerd Font", "Symbols Nerd Font", "Symbols Nerd Font Mono";
   font-weight: bold;
   font-size: 15px;
   min-height: 0;
