--- a/home/.config/waybar/styles/monitor_specific/eink.css
+++ b/home/.config/waybar/styles/monitor_specific/eink.css
@@ -10,6 +10,10 @@
   min-height: 0px;
 }
 
+.eink tooltip {
+  opacity: 1;
+}
+
 .eink .module#workspaces.main button {
   padding: 0;
   margin: 2px;
